@@ -1,6 +1,7 @@
 
   Overview of changes in CVS Etherape 0.1.7 (Tuesday 02-28-2000):
   
+     * Added libm to autoconf.in for systems with a separate math lib.
      * Pcap filtering added. Now you can use tcpdump style filtering
        (enclosed in quotes) with the -f option.
        
